--- a/assets/styles.css
+++ b/assets/styles.css
@@ -845,26 +845,27 @@ button:hover{background:#153154}
   width:auto;
 }
 
+/* ======================= 각 상품별 * 그라데이션 ======================= */
 .hero-note-main::before {
   content: "*";
-  background: linear-gradient(90deg,#ff5757 #8c52ff);
+  background: linear-gradient(90deg,#ff5757 #8c52ff #004aad);
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
   font-weight: 700;
   display: inline-block;
-  margin-right: 4px;
+  margin-right: 5px;
 }
 
 .hero-note-sub::before {
   content: "**";
-  background: linear-gradient(90deg, #ff5757 #8c52ff);
+  background: linear-gradient(90deg, #ff5757 #8c52ff #004aad);
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
   font-weight: 700;
   display: inline-block;
-  margin-right: 4px;
+  margin-right: 5px;
 }
 
 
@@ -1436,6 +1437,7 @@ body.beta-body button{
   white-space: nowrap;
   border: 0;
 }
+
 
 
 
