--- a/assets/styles.css
+++ b/assets/styles.css
@@ -847,13 +847,13 @@ button:hover{background:#153154}
 
 /* ======================= 각 상품별 * 그라데이션 ======================= */
 .hero-note-star {
-  background: linear-gradient(90deg, #faee21, #6fe600, #00ffff);
+  background: linear-gradient(90deg, #ff5757, #8c52ff, #004aad);
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
   font-weight: 700;
   display: inline-block;
-  margin-right: 4px;
+  margin-right: 5px;
 }
 
 /* ======================= 베타 전용 상단 레이아웃 ======================= */
@@ -1424,6 +1424,7 @@ body.beta-body button{
   white-space: nowrap;
   border: 0;
 }
+
 
 
 
